# rusted-toolbox

./: .aiignore  .cursorignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.bat  build.sh  contributing.md  convenience-build-macos.sh  convenience-build-ubuntu.sh  readme.md
crates/ai-shared/: Cargo.toml  changelog.md  readme.md
crates/ai-shared/src/: lib.rs  models.rs
crates/ai-shared/src/ai_functions/: media_sorter_functions.rs  mod.rs
crates/ai-shared/src/message_builders/: mod.rs  system_message_builders.rs
crates/ai-shared/src/request_wrappers/: mod.rs  requester_builders.rs  requester_implementations.rs  requester_traits.rs
crates/ai-shared/src/utils/: mod.rs  request_loggers.rs
crates/ai-tool-chatbot/: Cargo.toml  changelog.md  readme.md
crates/ai-tool-chatbot/.personalities/games/: bg3_Shadowheart.txt  personas_Neil DeGrasse Tyson.txt
crates/ai-tool-chatbot/src/: chatbot_app.rs  cli_utils.rs  main.rs  models.rs
crates/ai-tool-how/: Cargo.toml  readme.md
crates/ai-tool-how/src/: ai_functions.rs  cli_utils.rs  how_app.rs  main.rs  models.rs
crates/scene-media-organizer/: Cargo.toml
crates/scene-media-organizer/src/: constants.rs  lib.rs
crates/scene-media-organizer/src/models/: created_event_item.rs  guessit_response.rs  mod.rs  watchdog_runtime_config.rs
crates/scene-media-organizer/src/routines/: process_file.rs
crates/scene-media-organizer/src/tools/: mod.rs
crates/scene-media-organizer/src/utils/: file_status_controller.rs  guessit_client.rs  mod.rs
crates/shared/: Cargo.toml  changelog.md  readme.md
crates/shared-eventhub/: Cargo.toml
crates/shared-eventhub/src/: eventhub_models.rs  eventhub_traits.rs  lib.rs
crates/shared-eventhub/src/utils/: cli_arguments.rs  config_utils.rs  extract_eventhub_endpoint_from_connection_string.rs  get_eventhub_database_path.rs
crates/shared/src/: lib.rs
crates/shared/src/command_line/: cli_builder.rs  mod.rs
crates/shared/src/constants/: general.rs  versions.rs
crates/shared/src/eventhub/: eventhub_models.rs  eventhub_traits.rs
crates/shared/src/logging/: app_logger.rs  logging_helpers.rs  mod.rs
crates/shared/src/sqlite/: database_entity_traits.rs  dictionary_db.rs  generic_db.rs  list_db.rs  mod.rs
crates/shared/src/system/: ensure_directory_exists.rs  get_current_working_dir.rs  get_full_filepath_from_string.rs  load_env_variables.rs  load_json_file_to_object.rs  mod.rs  (+7 more)
crates/tool-aiignore/: Cargo.toml  changelog.md  readme.md
crates/tool-aiignore/src/: aiignore_app.rs  cli_utils.rs  main.rs  models.rs
crates/tool-b64/: Cargo.toml  changelog.md  readme.md
crates/tool-b64/src/: b64_app.rs  cli_utils.rs  main.rs  models.rs
crates/tool-cat/: Cargo.toml  changelog.md  readme.md
crates/tool-cat/src/: cat_app.rs  cli_utils.rs  main.rs  models.rs
crates/tool-csvn/: Cargo.toml
crates/tool-csvn/src/: cli_utils.rs  csvn_app.rs  main.rs  models.rs
crates/tool-distro-cc/: Cargo.toml  readme.md
crates/tool-distro-cc/src/: ai_functions.rs  cli_utils.rs  command_parser.rs  distro_cc_app.rs  distro_detect.rs  distro_map.rs  main.rs  models.rs
crates/tool-eventhub-export/: Cargo.toml  changelog.md  readme.md
crates/tool-eventhub-export/src/: cli_utils.rs  eventhub_export_app.rs  export_progress_tracker.rs  main.rs  runtime_config_utils.rs
crates/tool-eventhub-read/: Cargo.toml  changelog.md
crates/tool-eventhub-read/src/: cli_utils.rs  eventhub_reader_app.rs  graceful_shutdown.rs  main.rs  progress_tracker.rs  runtime_config_utils.rs
crates/tool-get-lines/: Cargo.toml
crates/tool-get-lines/src/: cli_utils.rs  get_lines_app.rs  main.rs  models.rs
crates/tool-gitignore/: Cargo.toml  changelog.md  readme.md
crates/tool-gitignore/src/: cli_utils.rs  config.rs  gitignore_app.rs  main.rs  models.rs
crates/tool-guid/: Cargo.toml  readme.md
crates/tool-guid/src/: cli_utils.rs  guid_app.rs  main.rs  models.rs
crates/tool-http-server/: Cargo.toml  changelog.md  readme.md
crates/tool-http-server/.web-root-demo/: index.html  script.js  styles.css
crates/tool-http-server/src/: cli_utils.rs  http_app.rs  main.rs  models.rs
crates/tool-image/: Cargo.toml  changelog.md  readme.md
crates/tool-image/src/: cli_utils.rs  image_app.rs  image_edit_routines.rs  image_encoders.rs  image_format_traits.rs  main.rs  models.rs  string_traits.rs
crates/tool-jwt/: Cargo.toml  changelog.md
crates/tool-jwt/src/: cli_utils.rs  jwt_app.rs  main.rs  models.rs
crates/tool-lookup/: Cargo.toml  changelog.md  readme.md
crates/tool-lookup/src/: cli_utils.rs  lookup_app.rs  lookup_files_app.rs  lookup_shared.rs  lookup_text_app.rs  main.rs  models.rs
crates/tool-mock/: Cargo.toml  changelog.md  readme.md
crates/tool-mock/src/: cli_utils.rs  main.rs  mock_app.rs  models.rs
crates/tool-mqtt/: Cargo.toml  changelog.md  readme.md
crates/tool-mqtt/src/: cli_utils.rs  main.rs  models.rs  mqtt_app.rs  string_traits.rs
crates/tool-netquality/: Cargo.toml  Dockerfile  changelog.md  config.example.json  readme.md
crates/tool-netquality/src/: cli_utils.rs  main.rs  netqualify_app.rs  runtime_state.rs
crates/tool-pingx/: Cargo.toml  changelog.md  readme.md
crates/tool-pingx/src/: cli_utils.rs  main.rs  models.rs  pingx_app.rs
crates/tool-pingx/tests/: cli_tests.rs
crates/tool-qrcode/: Cargo.toml  changelog.md  readme.md
crates/tool-qrcode/src/: cli_utils.rs  main.rs  models.rs  qrcode_app.rs
crates/tool-remove-zw/: Cargo.toml  readme.md
crates/tool-remove-zw/src/: cli_utils.rs  main.rs  models.rs  remove_zw_app.rs
crates/tool-remove-zw/test-files/: cf_u200b.txt  cf_u200c.txt  cf_u200d.txt  cf_u2060.txt  cf_ufeff.txt  complex.txt  no_cf.txt
crates/tool-split/: Cargo.toml  readme.md
crates/tool-split/src/: cli_utils.rs  main.rs  models.rs  split_app.rs
crates/tool-timestamp/: Cargo.toml  changelog.md  readme.md
crates/tool-timestamp/src/: cli_utils.rs  main.rs  models.rs  ts_app.rs
crates/tool-touch/: Cargo.toml  readme.md
crates/tool-touch/src/: cli_utils.rs  main.rs  models.rs  touch_app.rs
crates/tool-touch/tests/: integration_tests.rs
(+265 files in other folders)
