[workspace]
resolver = "2"

members = [
    "crates/ai-macros",
    "crates/shared",
    "crates/tool-cat",
    "crates/tool-csvn",
    "crates/tool-eventhub-export",
    "crates/tool-eventhub-read",
    "crates/tool-get-lines",
    "crates/tool-guid",
    "crates/tool-jwt",
    "crates/tool-split",
    "crates/tool-touch",
    "crates/tool-timestamp",
    "crates/tool-http-server",
    "crates/tool-mock",
    "crates/ai-tool-chatbot",
    "crates/ai-shared",
    "crates/ai-tool-how",
    "crates/tool-whisper"
, "crates/tool-whisper2"]
