[package]
name = "ai-shared"
version = "1.0.0"
edition = "2021"
authors = ["Breno RdV"]
description = "Where all AI-related shared code lives."

[dependencies]
shared = { path = "../shared" }
ai-macros = { path = "../ai-macros" }
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
async-trait = "0.1.89"
reqwest = { version = "0.12.23", features = ["json"] }
chrono = "0.4.41"