[package]
name = "shared-eventhub"
version = "1.0.0"
edition = "2021"
authors = ["Breno RdV"]
description = "Where all eventhub specific shared code lives."

[dependencies]
shared = { path = "../shared" }
clap = { version = "4.5.48", features = ["derive"] }
tracing-log = "0.2.0"
anyhow = "1.0.100"
url = "2.5.7"
serde = { version = "1.0.227", features = ["derive"] }
azeventhubs = "0.20.0"
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
rstest="0.26.1"