[package]
name = "shared"
version = "1.0.0"
edition = "2021"
authors = ["Breno RdV"]
description = "Where all shared code lives."

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.6", features = ["v4"] }
arboard = "3.3"
csv = "1.3"
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.11.1"
futures = "0.3"
async-std = { version = "1.12", features = ["attributes"] }
encoding_rs = "0.8"
num_cpus = "1.16"
filetime = "0.2"
jsonwebtoken = "9.0"
serde_json = "1.0"
colored = "2.0"
base64 = "0.21"
ctrlc = "3.4"
sled = "0.34"
crossterm = "0.27"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fastrand = "2.0"
log = "0.4"
azeventhubs = "0.20"
azure_core = "0.20"
azure_identity = "0.20"
bytes = "1.5"
url = "2.5.4"
futures-util = "0.3"
async-trait = "0.1.88"
tokio-stream = "0.1.17"
once_cell = "1.21.3"
memmap2="0.9.5"
string-interner="0.19.0"
reqwest = { version = "0.12.22", features = ["json"] }
dialoguer = "0.11.0"
notify="8.1.0"
decompress = "0.6.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rusted_toolbox_macros = { path = "../macros" }
walkdir = "2.5.0"
tracing-log = "0.2.0"
infer="0.19.0"

[dev-dependencies]
tempfile = "3.20.0"
rstest="0.26.1"