[package]
name = "shared"
version = "1.0.0"
edition = "2021"
authors = ["Breno RdV"]
description = "Where all shared code lives."

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4"] }
arboard = "3.6.0"
csv = "1.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
futures = "0.3.31"
serde_json = "1.0.142"
ctrlc = "3.4.7"
crossterm = "0.29.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
log = "0.4.27"
azeventhubs = "0.20"
bytes = "1.10.1"
url = "2.5.4"
once_cell = "1.21.3"
memmap2="0.9.7"
dialoguer = "0.11.0"
notify="8.2.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
walkdir = "2.5.0"
tracing-log = "0.2.0"
infer="0.19.0"
dotenv = "0.15.0"

[dev-dependencies]
tempfile = "3.20.0"
rstest="0.26.1"