[package]
name = "shared"
version = "1.1.2"
edition = "2021"
authors = ["Breno RdV"]
description = "Where all shared code lives."

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
arboard = "3.6.1"
csv = "1.3.1"
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
serde = { version = "1.0.226", features = ["derive"] }
regex = "1.11.3"
futures = "0.3.31"
serde_json = "1.0.145"
ctrlc = "3.5.0"
crossterm = "0.29.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
bytes = "1.10.1"
once_cell = "1.21.3"
memmap2="0.9.8"
dialoguer = "0.12.0"
notify="8.2.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
walkdir = "2.5.0"
dotenv = "0.15.0"

[dev-dependencies]
tempfile = "3.23.0"
rstest="0.26.1"