[package]
name = "aiignore"
version = "1.0.2"
edition = "2021"
authors = ["Breno RdV"]
description = "Tool that creates and updates common ai-ignore files"
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.100"
clap = "4.5.48"
tracing = "0.1.41"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = "1.47.1"