[package]
name = "b64"
version = "1.0.0"
edition = "2021"
authors = ["Breno RdV"]
description = "Encodes/Decodes text and files to base 64 format"
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
base64 = "0.22.1"
clap = "4.5.51"
tracing = "0.1.41"

[dev-dependencies]
tempfile = "3.23.0"