[package]
name = "cat"
version = "1.0.1"
edition = "2021"
authors = ["Breno RdV"]
description = "Port of the Unix cat command."
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
clap = "4.5.48"
anyhow = "1.0.100"
rstest = "0.26.1"
tempfile = "3.23.0"
tracing = "0.1.41"