[package]
name = "csvn"
version = "1.0.2"
edition = "2021"
authors = ["Breno RdV"]
description = "CLI tool that fills missing CSV fields with defaults and outputs a `_normalized` file for consistent, error-free downstream processing."
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
string-interner = "0.19.0"
anyhow = "1.0.100"
clap = "4.5.48"
chrono = "0.4.42"
csv = "1.3.1"
tracing = "0.1.41"