[package]
name = "eh-read"
version = "2.0.0"
edition = "2021"
authors = ["Breno RdV"]
description = "EventHub Message Reader Tool."
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
shared-eventhub = { path = "../shared-eventhub" }
clap = "4.5.48"
anyhow = "1.0.100"
azeventhubs = "0.20.0"
chrono = "0.4.42"
futures-util = "0.3.31"
sled = "0.34.7"
tokio = "1.47.1"
tracing = "0.1.41"
serde_json = "1.0.145"
ctrlc = "3.5.0"
crossterm = "0.29.0"