[package]
name = "gitignore"
version = "1.0.0"
edition = "2021"
authors = ["Breno RdV"]
description = "Tool that scans the files and gets the appropriate data for creating/updating the gitignore file."
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.99"
clap = "4.5.45"
tracing = "0.1.41"
walkdir = "2.5.0"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = "1.47.1"