[package]
name = "http"
version = "1.0.0"
edition = "2021"
authors = ["Breno RdV"]
description = "Lightweight async HTTP server for quickly serving static files with directory browsing, MIME detection, logging, and secure development-focused features."
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
clap = "4.5.45"
warp = { version = "0.4.1", features = ["server"] }
chrono = { version = "0.4.41", features = ["serde"] }
percent-encoding = "2.3.1"
mime_guess = "2.0.5"
tracing = "0.1.41"