[package]
name = "imgx"
version = "1.0.1"
edition = "2021"
authors = ["Breno RdV"]
description = "Quick way for editing images from the terminal"
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive", "color"] }
tracing = "0.1.41"
indicatif = "0.18.0"
rayon = "1.11.0"
num_cpus = "1.17.0"
image = { version = "0.25.6", features = ["png", "jpeg", "gif", "webp", "tiff", "avif"] }
gif = "0.13.3"
imagequant = { version = "4.4.1" }