[package]
name = "jwt"
version = "1.0.3"
edition = "2021"
authors = ["Breno RdV"]
description = "Decodes JWT tokens and extracts their public claims, headers, and payload information. Optionally copies claims to clipboard."
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
clap = "4.5.48"
anyhow = "1.0.100"
colored = "3.0.0"
jsonwebtoken = "9.3.1"
serde_json = "1.0.145"
chrono = "0.4.42"
serde = { version = "1.0.226", features = ["derive"] }
tracing = "0.1.41"