[package]
name = "lookup"
version = "2.0.0"
edition = "2021"
authors = ["Breno RdV"]
description = "Tool to recursively search for text in files"
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
clap = "4.5.51"
anyhow = "1.0.100"
tracing = "0.1.41"
regex = "1.12.2"
globset = "0.4.18"
walkdir = "2.5.0"