[package]
name = "mock"
version = "1.0.0"
edition = "2021"
authors = ["Breno RdV"]
description = "Mock data generator CLI tool."
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
clap = "4.5.45"
anyhow = "1.0.99"
tracing = "0.1.41"
rand = "0.9.2"
chrono = { version = "0.4.41", features = ["serde"] }
fake = { version = "4.4.0", features = ["derive", "chrono"] }