[package]
name = "mqtt"
version = "1.0.1"
edition = "2021"
authors = ["Breno RdV"]
description = "Tool for quickly post to or read from a MQTT topic."
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
clap = "4.5.45"
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
rumqttc = "0.24.0"
tracing = "0.1.41"