[package]
name = "mqtt"
version = "1.0.2"
edition = "2021"
authors = ["Breno RdV"]
description = "Tool for quickly post to or read from a MQTT topic."
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
clap = "4.5.48"
anyhow = "1.0.100"
tokio = { version = "1.47.1", features = ["full"] }
rumqttc = { version = "0.25.0", default-features = false, features = ["use-native-tls"] }
tracing = "0.1.41"