[package]
name = "netquality"
version = "1.1.0"
edition = "2021"
authors = ["Breno RdV"]
description = "Cross platform CLI tool that monitors internet connectivity and speed."
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared", features = ["otel"] }
clap = "4.5.60"
anyhow = "1.0.102"
# The package reqwest must stay at version 0.12.28 to match cfspeedtest's version.
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
rusqlite = { version = "0.38.0", features = ["bundled"] }
cfspeedtest = "2.2.0"
tokio = { version = "1.49.0", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }
