[package]
name = "pingx"
version = "1.0.0"
edition = "2021"
authors = ["Breno RdV"]
description = "Cross platform CLI tool to ping other hosts."
repository = "https://github.com/brenordv/rusted-toolbox"


[dependencies]
shared = { path = "../shared" }
clap = "4.5.50"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
# ICMP/ICMPv6 ping implementation (RFC 792/4443)
surge-ping = "0.8.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dns-lookup = "3.0.1"
chrono = "0.4.42"