[package]
name = "qrcode"
version = "1.0.0"
edition = "2021"
authors = ["Breno RdV"]
description = "Tool to quickly generate QR Codes"
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.100"
clap = "4.5.48"
tracing = "0.1.41"
qrcodegen = "1.8.0"
image = "0.25.8"
chrono = "0.4.42"