[package]
name = "ts"
version = "1.1.0"
edition = "2021"
authors = ["Breno RdV"]
description = "Bidirectional CLI converter between Unix timestamps and human-readable datetimes with auto-detection, multi-format support, and UTC/local output."
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
clap = "4.5.45"
chrono = "0.4.41"
anyhow = "1.0.99"
tracing = "0.1.41"