[package]
name = "touch"
version = "1.0.1"
edition = "2021"
authors = ["Breno RdV"]
description = "Port of the Unix touch command."
repository = "https://github.com/brenordv/rusted-toolbox"

[dependencies]
shared = { path = "../shared" }
filetime = "0.2.26"
anyhow = "1.0.100"
clap = "4.5.48"
chrono = "0.4.42"
tracing = "0.1.41"

[dev-dependencies]
tempfile = "3.23.0"